[gd_scene load_steps=5 format=3 uid="uid://d2ehwp56anoso"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_msgwl"]
[ext_resource type="PackedScene" uid="uid://dolgsnqkg35ra" path="res://scenes/player.tscn" id="1_vr76m"]
[ext_resource type="PackedScene" uid="uid://dwbcl8rxioavv" path="res://scenes/enemy.tscn" id="2_ocqly"]

[sub_resource type="Curve2D" id="Curve2D_e0pin"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 240, 0, 0, 0, 0, 0, 240, 360, 0, 0, 0, 0, 0, 360, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_msgwl")
enemy_scene = ExtResource("2_ocqly")

[node name="Player" parent="." instance=ExtResource("1_vr76m")]

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(120, 225)

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_e0pin")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
